tests/harness/errors/151_set_add_non_set.eu
result: "hello" set.add("world")
